// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render with checked styles when passed the checked prop 1`] = `
.circuit-4:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: inline-block;
  padding-left: 24px;
  position: relative;
}

.circuit-2::before {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-2 svg {
  height: 10px;
  width: 10px;
  box-sizing: border-box;
  fill: #3388FF;
  display: block;
  left: 3px;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

<div
  className="circuit-4 circuit-5"
>
  <input
    checked={true}
    className="circuit-0 circuit-1"
    disabled={false}
    id="checkbox_2"
    name="name"
    onChange={[MockFunction]}
    type="checkbox"
    value=""
  />
  <label
    checked={true}
    className="circuit-2 circuit-3"
    disabled={false}
    htmlFor="checkbox_2"
    name="name"
    onChange={[MockFunction]}
    value=""
  >
    <div>
      checked-icon.svg
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with default styles 1`] = `
.circuit-4:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: inline-block;
  padding-left: 24px;
  position: relative;
}

.circuit-2::before {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-2 svg {
  height: 10px;
  width: 10px;
  box-sizing: border-box;
  fill: #3388FF;
  display: block;
  left: 3px;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

<div
  className="circuit-4 circuit-5"
>
  <input
    checked={false}
    className="circuit-0 circuit-1"
    disabled={false}
    id="checkbox_1"
    name="name"
    onChange={[MockFunction]}
    type="checkbox"
    value=""
  />
  <label
    checked={false}
    className="circuit-2 circuit-3"
    disabled={false}
    htmlFor="checkbox_1"
    name="name"
    onChange={[MockFunction]}
    value=""
  >
    <div>
      checked-icon.svg
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with disabled styles when passed the disabled prop 1`] = `
.circuit-4:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: inline-block;
  padding-left: 24px;
  position: relative;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-2::before {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-2 svg {
  height: 10px;
  width: 10px;
  box-sizing: border-box;
  fill: #3388FF;
  display: block;
  left: 3px;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-2::before {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  border-color: #9DA7B1;
  background-color: #FAFBFC;
}

.circuit-2 svg {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  fill: #9DA7B1;
}

<div
  className="circuit-4 circuit-5"
>
  <input
    checked={false}
    className="circuit-0 circuit-1"
    disabled={true}
    id="checkbox_3"
    name="name"
    onChange={[MockFunction]}
    type="checkbox"
    value=""
  />
  <label
    checked={false}
    className="circuit-2 circuit-3"
    disabled={true}
    htmlFor="checkbox_3"
    name="name"
    onChange={[MockFunction]}
    value=""
  >
    <div>
      checked-icon.svg
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with invalid styles when passed the invalid prop 1`] = `
.circuit-4:last-of-type {
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

.circuit-0:checked + label > svg {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-2 {
  color: #5C656F;
  display: inline-block;
  padding-left: 24px;
  position: relative;
}

.circuit-2::before {
  height: 16px;
  width: 16px;
  box-sizing: border-box;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 12px;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-2 svg {
  height: 10px;
  width: 10px;
  box-sizing: border-box;
  fill: #3388FF;
  display: block;
  left: 3px;
  line-height: 0;
  opacity: 0;
  position: absolute;
  top: 12px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-2:not(:focus)::before {
  border-color: #DB4D4D;
}

.circuit-2:not(:focus) svg {
  fill: #DB4D4D;
}

<div
  className="circuit-4 circuit-5"
>
  <input
    checked={false}
    className="circuit-0 circuit-1"
    disabled={false}
    id="checkbox_4"
    name="name"
    onChange={[MockFunction]}
    type="checkbox"
    value=""
  />
  <label
    checked={false}
    className="circuit-2 circuit-3"
    disabled={false}
    htmlFor="checkbox_4"
    name="name"
    onChange={[MockFunction]}
    value=""
  >
    <div>
      checked-icon.svg
    </div>
  </label>
</div>
`;
